--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Webrtc video room</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <base id="mybase" href="/web_call" />
   <style>
   	body {
 		background: #333;
@@ -13,6 +14,6 @@
 </head>
 <body itemscope="itemscope" itemtype="http://schema.org/WebPage">
   <main id="app" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="https://schema.org/SoftwareApplication">
-  <script src="/bundle.js" async></script>
+  <script src="bundle.js" async></script>
 </body>
 </html>
