--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Webrtc video room</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <base id="mybase" href="/web_call" />
+  <base id="mybase" href="/web_call/" />
   <style>
   	body {
 		background: #333;
