--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 </head>
 <body itemscope="itemscope" itemtype="http://schema.org/WebPage">
   <main id="app" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="https://schema.org/SoftwareApplication">
+    </main>
   <script src="bundle.js" async></script>
 </body>
 </html>
