--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>Webrtc video room</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <base id="mybase" href="/web_call/" />
-  <script src="https://webrtc.github.io/adapter/adapter-latest.js" />
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js" ></script>
   <style>
   	body {
 		background: #333;
